--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section class="header-container">
             <img src="./assets/Group.png" alt="">
             <h3>"In the near future, I hope to become a Developer."</h3>
-            <p>It's been a dream of mine to become a great computer programmer. PH is making this dream come true!</p>
+            <p>It's been a dream of mine to become a greater computer programmer. PH is making this dream come true!</p>
             <div class="banner-btn">
                 <button class="btn-primary">Contact with me</button>
             </div>
