YouTube Video added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
                 </div>
             </div>
         </section>
+
+        <section class="video-block">
+            <div class="section-title">Why Web Development??</div>
+            <div class="section-info">Web development is an ever grorwing field and there's never been a great time to become a developer.</div>
+            <div class="yt-video">
+                <iframe width="1076" height="550" src="https://www.youtube.com/embed/sX1Y2JMK6g8?si=zg6Y4Qj1vrW06XWh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+
     </main>
     <footer>
 
