goal section added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             </div>
         </section>
 
+        <!-- YouTube iframe Section -->
+
         <section class="video-block">
             <div class="section-title">Why Web Development??</div>
             <div class="section-info">Web development is an ever grorwing field and there's never been a great time to become a developer.</div>
@@ -57,6 +59,38 @@
             </div>
         </section>
 
+        <!-- My Current Target section -->
+
+        <section class="current-goal">
+            <div class="section-title">My Current Target</div>
+            <div class="section-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</div>
+            <div class="skill-card">
+                <div class="skill">
+                    <img src="./assets/html.png" alt="">
+                    <h3>HTML</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing.
+                    </p>
+                    <div class="learn-more">Learn More</div>
+                </div>
+                <div class="skill css-1">
+                    <img src="./assets/css.png" alt="">
+                    <h3>CSS</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing.
+                    </p>
+                    <div class="learn-more">Learn More</div>
+                </div>
+                <div class="skill js-1">
+                    <img src="./assets/js.png" alt="">
+                    <h3>JavaScript</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing.
+                    </p>
+                    <div class="learn-more">Learn More</div>
+                </div>                
+            </div>
+        </section>
     </main>
     <footer>
 
