Basic Everything added

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <section class="header-container">
             <img src="./assets/Group.png" alt="">
             <h3>"In the near future, I hope to become a Developer."</h3>
-            <p>It's been a dream of mine to become a greater computer programmer. PH is making this dream come true!</p>
+            <p>It's been a dream of mine to become a great computer programmer. PH is making this dream come true!</p>
             <div class="banner-btn">
-                <button class="btn-primary">Contact with me</button>
+                <a href="#here"><button class="btn-primary" >Contact with me</button></a>
             </div>
         </section>
     </header>
     <main>
         <section class="inspiration">
             <div class="section-title">Why Web Development??</div>
-            <div class="section-info">Web development is an ever grorwing field and there's never been a great time to become a developer.</div>
+            <div class="section-info">Web development is an ever grorwing field and there's never been a greater time to become a developer.</div>
             <div class="cards">
                 <div class="card card-1">
                     <div class="texts">
                         <h3>I will Do Coding and Change the World</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p>I'm an aspiring developer passionate about creating innovative and efficient solutions through code. </p>
                         <button class="btn-secondary">Learn More</button>
                     </div>
                     <img src="./assets/Layer_1.png" alt="">
@@ -34,14 +34,14 @@
                     <img src="./assets/Group 3.png" alt="">
                     <div class="texts">
                         <h3>I will help People by creating Modern Web System</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p>I'm always eager to connect with fellow developers, potential employers, and anyone interested in technology. </p>
                         <button class="btn-secondary">Learn More</button>
                     </div>
                 </div>
                 <div class="card card-1">
                     <div class="texts">
                         <h3>I will Do Coding and Change the World</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p>I've honed my skills in various programming languages and technologies, including HTML, CSS, JavaScript, React, Node.js</p>
                         <button class="btn-secondary">Learn More</button>
                     </div>
                     <img src="./assets/Group 4.png" alt="">
@@ -52,8 +52,8 @@
         <!-- YouTube iframe Section -->
 
         <section class="video-block">
-            <div class="section-title">Why Web Development??</div>
-            <div class="section-info">Web development is an ever grorwing field and there's never been a great time to become a developer.</div>
+            <div class="section-title">My Inspiration</div>
+            <div class="section-info">My journey as a developer is driven by a passion for innovation and a desire to make a tangible impact on the world.</div>
             <div class="yt-video">
                 <iframe width="1076" height="550" src="https://www.youtube.com/embed/sX1Y2JMK6g8?si=zg6Y4Qj1vrW06XWh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -63,7 +63,7 @@
 
         <section class="current-goal">
             <div class="section-title">My Current Target</div>
-            <div class="section-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</div>
+            <div class="section-info">Every new project is an opportunity to push boundaries, solve problems, and create solutions that can change lives. I am committed to using my skills to contribute to a better, more connected world.</div>
             <div class="skill-card">
                 <div class="skill">
                     <img src="./assets/html.png" alt="">
@@ -91,9 +91,27 @@
                 </div>                
             </div>
         </section>
+
+        <section class="support">
+            <div class="support-container">
+                <h3>I need support</h3>
+                <p>PH support system is awesome! Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer-container" id="here">
+            <h3>An Open Commitment by Awlad Hossain</h3>
+            <div class="icons">
+                <img src="./assets/facebook.png" alt="">
+                <img src="./assets/github.png" alt="">
+                <img src="./assets/linkedin-icon 1.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
