--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
                     <img src="./assets/html.png" alt="">
                     <h3>HTML</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing.
+                        HTML is the backbone of websites. 
                     </p>
-                    <div class="learn-more">Learn More</div>
+                    <div class="learn-more"><a href="https://www.w3schools.com/html/" target="_blank">Learn More</a></div>
                 </div>
                 <div class="skill css-1">
                     <img src="./assets/css.png" alt="">
                     <h3>CSS</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing.
+                        CSS adds style and visual appeal to web pages.
                     </p>
-                    <div class="learn-more">Learn More</div>
+                    <div class="learn-more"><a href="https://www.w3schools.com/css/default.asp" target="_blank">Learn More</a></div>
                 </div>
                 <div class="skill js-1">
                     <img src="./assets/js.png" alt="">
                     <h3>JavaScript</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing.
+                        JS brings dynamic behavior to websites.
                     </p>
-                    <div class="learn-more">Learn More</div>
+                    <div class="learn-more"><a href="https://www.w3schools.com/js/default.asp" target="_blank">Learn More</a></div>
                 </div>                
             </div>
         </section>
@@ -107,9 +107,9 @@
         <div class="footer-container" id="here">
             <h3>An Open Commitment by Awlad Hossain</h3>
             <div class="icons">
-                <img src="./assets/facebook.png" alt="">
-                <img src="./assets/github.png" alt="">
-                <img src="./assets/linkedin-icon 1.png" alt="">
+                <a href="https://www.facebook.com/ishtiaksaad" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+                <a href="https://github.com/IshtiakSaad" target="_blank"><img src="./assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/ishtiaksaad/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
             </div>
         </div>
     </footer>
