--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="section-title">My Inspiration</div>
             <div class="section-info">My journey as a developer is driven by a passion for innovation and a desire to make a tangible impact on the world.</div>
             <div class="yt-video">
-                <iframe width="1076" height="550" src="https://www.youtube.com/embed/sX1Y2JMK6g8?si=zg6Y4Qj1vrW06XWh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="1076" height="550" src="https://www.youtube.com/embed/JUwePydwbUI?si=ZM0vwNphhblUoJeE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -95,7 +95,7 @@
         <section class="support">
             <div class="support-container">
                 <h3>I need support</h3>
-                <p>PH support system is awesome! Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <p>I am fortunate to have a network of mentors, peers, and resources that play a significant role in my development journey. </p>
                 <form action="">
                     <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
                     <input type="submit" value="Submit">
